# core-runtime

./: CLAUDE.md  CMakeLists.txt  README.md
docs/: CORE_RUNTIME_SPEC.md  NEXT_STEPS.md
docs/specs/: 001-fp8-dtype.md  002-status-returning-compute-ops.md  003-stream-parameter.md  _TEMPLATE.md
include/zero/: zero.hpp
include/zero/core/: allocator.hpp  dtype.hpp  memory.hpp  runtime.hpp  scalar.hpp  status.hpp  struct.hpp  tensor.hpp
include/zero/device/: device.hpp  sync.hpp
include/zero/ir/: control_flow.hpp  function.hpp  op_kind.hpp
include/zero/ops/: elementwise.hpp  matmul.hpp  reduce.hpp  reshape.hpp
tests/: CMakeLists.txt  basic_test.cpp  benchmark_test.cpp  test_activations.cpp  test_dtype.cpp  test_dtype_fp8.cpp  test_op_status.cpp  test_op_stream.cpp  test_ops.cpp  test_scalar.cpp  test_tensor.cpp
